# wsdl-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
assets/aic/: agent_wsdl.xml
assets/hello/: hello.wsdl
assets/serversync/: serversync.wsd.xml
assets/weather/: weather.wsdl
examples/: traverse.rs
src/: lib.rs  wsdl.rs
