[package]
name = "wsdl"
version = "0.1.1"
edition = "2021"
description = "Idiomatic Rust wrapper for WSDL"
keywords = ["wsdl"]
homepage = "https://github.com/DrChat/wsdl-rs"
repository = "https://github.com/DrChat/wsdl-rs"
license = "Apache-2.0/MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.18"
thiserror = "1.0.44"

[dev-dependencies]
anyhow = "1.0.72"
clap = "4.3"
